fixed pagination disalignment

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/pagination.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/pagination.less
@@ -73,8 +73,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    //same height as its parent to avoid disalignment
-    height: 100%;
   }
 
   .pagination-indicator {
